--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,15 @@
 !main.py
 !database.py
 !models.py
+!config.py
 !requirements.txt
 
 # Documentation
 !README.md
 !MIGRATIONS.md
+!ENV_EXAMPLE.md
+!docs/
+!docs/**
 
 # Nix development environment
 !shell.nix
@@ -30,4 +34,9 @@
 
 # Database file (optional - uncomment if you want to track it)
 # !app.db
+
+# Environment files
+!.env
+!.env.local.example
+# .env.local is intentionally ignored (local overrides)
 
