--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ python-multipart==0.0.6
 sqlalchemy==2.0.23
 alembic==1.12.1
 python-dotenv==1.0.0
-
+passlib==1.7.4
+python-jose==3.5.0
+bcrypt==5.0.0
