--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DEBUG=false
 SECRET_KEY=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXXX
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+TG_BOT_API_KEY=XXXXXXXXXX:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TG_BOT_USERNAME=quite_map_register_bot
+BASE_URL=http://localhost:8000
